crates/gridwell-writer-typst/tests/snapshots/snapshots__striping-basic.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto, auto,),
  align: (left, left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[A]],
    [#text(weight: "bold")[B]],
    [#text(weight: "bold")[C]],
    table.hline(stroke: 0.5pt),
  ),
  [1],
  [2],
  [3],
  table.cell(fill: rgb("#8080800D"))[4],
  table.cell(fill: rgb("#8080800D"))[5],
  table.cell(fill: rgb("#8080800D"))[6],
  [7],
  [8],
  [9],
  table.cell(fill: rgb("#8080800D"))[10],
  table.cell(fill: rgb("#8080800D"))[11],
  table.cell(fill: rgb("#8080800D"))[12],
)
