crates/gridwell-writer-typst/tests/snapshots/snapshots__style-composition.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Key]],
    [#text(weight: "bold")[Value]],
    table.hline(stroke: 0.5pt),
  ),
  [normal],
  [42],
  table.cell(fill: rgb("#F1C40F"))[#text(weight: "bold", fill: rgb("#2C3E50"))[special]],
  [99],
)
