crates/gridwell-writer-typst/tests/snapshots/snapshots__styled-text.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Term]],
    [#text(weight: "bold")[Note]],
    table.hline(stroke: 0.5pt),
  ),
  [Rust],
  [A systems language\.],
)
