crates/gridwell-writer-typst/tests/snapshots/snapshots__text-format.snap
---
source: crates/gridwell-writer-typst/tests/snapshots.rs
expression: out
---
#table(
  columns: (auto, auto,),
  align: (left, left,),
  stroke: none,
  table.header(
    [#text(weight: "bold")[Format]],
    [#text(weight: "bold")[Sample]],
    table.hline(stroke: 0.5pt),
  ),
  [underline],
  [#underline[Underlined]],
  [line\-through],
  [#strike[Struck out]],
  [18px],
  [#text(size: 13.5pt)[Larger text]],
  [smaller],
  [#text(size: 0.8333em)[Smaller text]],
  [inline],
  [Plain\, #underline[underlined]\, #strike[struck] and #text(size: 13.5pt)[large]],
)
